--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
                                 </div>
                                 </div>
 
-                                <div class="coach__slide__item swiper-slide pink">
+                                <div class="coach__slide__item swiper-slide blue">
                                 <div class="nickname">
                                     <em>しゅん先生</em>
                                 </div>  
